# watsup

./: Cargo.toml  LICENSE  README.md  watsup.sh
.zed/: debug.json  tasks.json
src/: cli.rs  cli_args.rs  common.rs  config.rs  frame.rs  log.rs  main.rs  state.rs  watson.rs
src/stores/: in_memory_store.rs  watson.rs
